--- a/login/templates/login.html
+++ b/login/templates/login.html
@@ -3,7 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" sizes="64x64"  href="{{ url_for('static', filename='imagens/logos/favicon.ico') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='estilos/regisLog.css') }}">
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+
     <title>VibeScript - login</title>
 </head>
 <body>
@@ -20,8 +24,11 @@
                     <form action="{{ url_for('login.loginValidar') }}" method="post">
                         <label for="email">e-mail</label>
                         <input type="email" name="email" placeholder="e-mail">
-                        <label for="senha">senha</label>
-                        <input type="password" name="senha" placeholder="Senha">
+                        <div>
+                            <label class="lb-senha" for="senha">senha</label>
+                            <input class="inp-senha" type="password" name="senha" placeholder="Senha">
+                            <i class="bi bi-eye-fill verSenha"></i>
+                        </div>
                         {% set mensagem = get_flashed_messages() %}
                         {% if mensagem %}
                             <p class="erro">{{ mensagem[0] }}</p>
@@ -33,5 +40,7 @@
             </div>
         </div>
     </main>
+
+    <script src="{{ url_for('static', filename='js/regisLog.js') }}"></script>
 </body>
 </html>
