--- a/plataforma/static/estilos/chat.css
+++ b/plataforma/static/estilos/chat.css
@@ -15,7 +15,7 @@ html {
     height: 100dvh;
     display: flex;
     justify-content: space-between;
-    padding-top: 70px;
+    padding: 70px 0px 0px 0px;
 }
 
 .infos-personagem {
