--- a/plataforma/templates/listaPersonagens.html
+++ b/plataforma/templates/listaPersonagens.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" sizes="64x64"  href="{{ url_for('static', filename='imagens/logos/favicon.ico') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='estilos/home.css') }}">
     <link rel="stylesheet" href="{{ url_for('plataforma.static', filename='estilos/criacao.css') }}">
     <title>Criando o Personagem</title>
@@ -25,7 +26,7 @@
             <h2>Escolha a Aparência do Seu Personagem</h2>
             <div class="skin-content">
                 {% for skin in lst_skins %}
-                {% if skin[0] != 10 %}
+                {% if skin[0] != 10 and skin[0] != 17 %}
                     <div class="skin-container">
                         <img src="{{ url_for('plataforma.static', filename=skin[2]) }}" alt="img_personagem">
                         <p>{{skin[1]}}</p>
