--- a/static/estilos/home.css
+++ b/static/estilos/home.css
@@ -14,6 +14,7 @@ html {
 
 section {
     min-height: 80dvh;
+    padding: 10px;
 }
 
 h2, h3 {
@@ -95,16 +96,20 @@ h2 {
 .apresentacao-container {
     display: flex;
     align-items: center;
-    justify-content: space-around;
+    justify-content: center;
+    gap: 30px;
+    flex-wrap: wrap;
+    margin-top: 100px;
 }
 
 .apresentacao-infos {
     max-width: 500px;
-    min-height: 90vh;
+    width: 100%;
+    max-height: 90vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    gap: 30px;
+    gap: 40px;
 }
 
 .links {
@@ -134,6 +139,11 @@ h2 {
     color: var(--azulEscuro);
 }
 
+.container-img-personagem > img {
+    max-width: 266px;
+    width: 100%;
+}
+
 /* /APRESENTACAO */
 
 
@@ -150,8 +160,8 @@ h2 {
     flex-direction: column;
     justify-content: flex-start;
     width: 100%;
-    padding: 30px;
     gap: 80px;
+    padding-top: 30px;
 }
 
 .passos-titulo {
@@ -220,19 +230,27 @@ h2 {
     justify-content: flex-start;
     align-items: center;
     width: 100%;
-    padding: 30px;
     gap: 80px;
+    padding-top: 30px;
 }
 
 .sobre-content {
     width: 100%;
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
+    gap: 40px;
     align-items: center;
+    flex-wrap: wrap;
+}
+
+.sobre-container > img {
+    max-width: 266px;
+    width: 100%;
 }
 
 .sobre-content > p {
-    width: 600px;
+    max-width: 600px;
+    width: 100%;
     font-size: 1.2em;
 }
 
@@ -357,8 +375,10 @@ footer {
     width: 100%;
     padding: 10px;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
+    flex-wrap: wrap;
+    gap: 10px;
 }
 
 .footer-content, .lnk-uteis {
