--- a/templates/home.html
+++ b/templates/home.html
@@ -34,7 +34,7 @@
                         <a class="lnk-regis1" href="{{ url_for('registrar.formulario') }}">Registrar-se</a>
                     </div>
                 </div>
-                <div>
+                <div class="container-img-personagem">
                     <img src="{{ url_for('static', filename='imagens/personagens/personagem1.png') }}" alt="personagem">
                 </div>
             </div>
@@ -67,7 +67,7 @@
                 </div>
             </div>
         </section>
-        <section class="sobre">
+        <section id="sobre" class="sobre">
             <div class="sobre-container">
                 <h2>Sobre</h2>
                 <div class="sobre-content">
@@ -131,14 +131,14 @@
             </div>
             <div class="footer-content">
                 <h4>Contato:</h4>
-                <p>vibescript@gmail.com</p>
+                <p>vibescript.com@gmail.com</p>
                 <p>(61) 9 91234-5678</p>
             </div>
             <div class="lnk-uteis">
-                <a href="#">Registrar-se</a>
-                <a href="#">login</a>
-                <a href="#">planos</a>
-                <a href="#">sobre</a>
+                <a href="{{ url_for('registrar.formulario') }}">Registrar-se</a>
+                <a href="{{ url_for('login.formulario') }}">login</a>
+                <a href="{{ url_for('login.formulario') }}">planos</a>
+                <a href="#sobre">sobre</a>
             </div>
         </div>
         <p class="creditos">desenvolvido por <a href="#">Rafael Brandão</a></p>
