--- a/plataforma/static/estilos/chat.css
+++ b/plataforma/static/estilos/chat.css
@@ -19,19 +19,51 @@ html {
 }
 
 .infos-personagem {
-    width: 25dvw;
+    width: 225px;
+    min-height: 100dvh;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
+    transition: .7s all;
+    position: fixed;
+    z-index: 100;
+    left: -175px;
+    background-color: transparent;
+}
+
+.infos-personagem-mostrar {
+    left: 0;
+    background-color: #fff;
+    box-shadow: 2px 2px 3px #5b5b5b86;
+}
+
+#btn-menu-lateral {
+    width: 35px;
+    height: 35px;
+    text-align: center;
+    padding: 3px;
+    border-radius: 100px;
+    border: none;
+    box-shadow: 0px 0px 3px #5b5b5b86;
+    background-color: #fff;
+    color: var(--azulEscuro);
+    cursor: pointer;
 }
 
 .nome-img-persona {
     display: flex;
-    justify-content: flex-start;
+    justify-content: space-between;
     gap: 10px;
     align-items: center;
     padding: 10px;
-    box-shadow: -2px 2px 3px #5b5b5b86;
+    box-shadow: none;
+}
+
+.nome-img-persona > div {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 10px;
 }
 
 .persona-imagem-container {
@@ -42,6 +74,7 @@ html {
     padding: 10px;
     box-shadow: 0px 0px 5px #5b5b5b86;
     display: flex;
+    transition: .5s;
 }
 
 .persona-imagem-container > img {
@@ -71,13 +104,15 @@ html {
 .data-hora-roteiro {
     font-size: .7em;
     text-align: end;
+    color: transparent;
+    transition: .3s;
 }
 
 .chat-content {
-    width: 75dvw;
+    width: 100dvw;
     height: 100dvh;
     box-shadow: 0px 0px 5px #5b5b5b86 inset;
-    background-color: #e8eef4;
+    background-color: var(--brancoGelo);
 
 }
 
@@ -96,15 +131,16 @@ html {
 }
 
 .input-chat {
-    width: 75vw;
+    width: 100vw;
     display: flex;
     justify-content: center;
     gap: 20px;
     align-items: center;
-    padding: 5px 0px;
+    padding: 5px 10px;
     position: fixed;
-    right: 10px;
+    left: 50vw;
     bottom: 10px;
+    transform: translateX(-50%);
 }
 
 .input-ideia {
@@ -113,7 +149,7 @@ html {
     font-size: 1.2em;
     border: none;
     border: 2px solid var(--azulEscuro);
-    background-color: var(--brancoGelo);
+    background-color: #fff;
     border-radius: 20px;
 }
 
@@ -121,14 +157,15 @@ html {
     width: 50px;
     height: 50px;
     text-align: center;
-    font-size: 1.5em;
-    font-weight: bold;
+    /* font-size: 1.5em; */
+    /* font-weight: bold; */
     padding: 5px;
     border-radius: 100px;
     border: none;
     box-shadow: 0px 0px 3px #5b5b5b86;
     background-color: var(--brancoGelo);
     color: var(--azulEscuro);
+    background-color: #fff;
     cursor: pointer;
 }
 
