comecei a implementar o sistema de assinatura

--- a/plataforma/templates/planos.html
+++ b/plataforma/templates/planos.html
@@ -58,7 +58,7 @@
                     {% if infos_plano[0][2] == 'padrao' %}
                         <a class="ass-plano" href="#">Plano atual</a>
                     {% else %}
-                        <a class="ass-plano" href="#">Assinar plano padrão</a>
+                        <a class="ass-plano" href="https://buy.stripe.com/test_28o9Eu9wsbIdfNS3cc">Assinar plano padrão</a>
                     {% endif %}
                 </div>
                 <div class="plano">
@@ -74,7 +74,7 @@
                     {% if infos_plano[0][2] == 'profissional' %}
                         <a class="ass-plano" href="#">Plano atual</a>
                     {% else %}
-                        <a class="ass-plano" href="#">Assinar plano profissional</a>
+                        <a class="ass-plano" href="https://buy.stripe.com/test_14k17Y38413zfNScMN">Assinar plano profissional</a>
                     {% endif %}
                 </div>
             </div>
